cluster_config_backup/2023_12_02/per_resource_api/virtualservices.networking.istio.io.default.ratings.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"ratings","namespace":"default"},"spec":{"hosts":["ratings"],"http":[{"match":[{"sourceLabels":{"topology.istio.io/network":"network1"}}],"name":"west-local","route":[{"destination":{"host":"ratings","subset":"west"}}]},{"match":[{"sourceLabels":{"topology.istio.io/network":"network2"}}],"name":"east-local","route":[{"destination":{"host":"ratings","subset":"east"}}]}]}}
  creationTimestamp: "2023-11-17T18:53:38Z"
  generation: 1
  name: ratings
  namespace: default
  resourceVersion: "156325"
  uid: 93b7bc63-706c-4540-8be1-3fd000953359
spec:
  hosts:
  - ratings
  http:
  - match:
    - sourceLabels:
        topology.istio.io/network: network1
    name: west-local
    route:
    - destination:
        host: ratings
        subset: west
  - match:
    - sourceLabels:
        topology.istio.io/network: network2
    name: east-local
    route:
    - destination:
        host: ratings
        subset: east
